Update slide with plt and Axes notes.

--- a/slides/html/combined.slides.html
+++ b/slides/html/combined.slides.html
@@ -24317,7 +24317,7 @@ dtype: object</pre>
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>Some things to keep in mind:</p>
 <ul>
-<li>Throughout this section we used <code>plt</code> functions to customize our plots, but <code>Axes</code> objects have equivalent methods for adding shaded regions, reference lines, annotations, etc. &ndash; although the names might be slightly different (e.g. <code>Axes.set_xlabel()</code> vs. <code>plt.xlabel()</code>). </li>
+<li>We used <code>plt</code> functions to customize our plots, but <code>Axes</code> objects have equivalent methods for adding shaded regions, reference lines, annotations, etc. &ndash; although the method names might be slightly different than their <code>plt</code> function counterparts (e.g. <code>Axes.set_xlabel()</code> vs. <code>plt.xlabel()</code>). </li>
 <li>Likewise, <code>plt</code> functions can be used to add plot titles and axis labels, with the important caveat that  <code>Axes</code> methods should always be used instead when dealing with subplots &ndash; otherwise, the action will only affect the last subplot.</li>
 </ul>
 
