Show full transpose result.

--- a/slides/html/combined.slides.html
+++ b/slides/html/combined.slides.html
@@ -20151,7 +20151,7 @@ dtype: object</pre>
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[23]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">tsa_pivoted</span><span class="o">.</span><span class="n">T</span><span class="o">.</span><span class="n">head</span><span class="p">()</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">tsa_pivoted</span><span class="o">.</span><span class="n">T</span>
 </pre></div>
 
      </div>
@@ -20231,6 +20231,36 @@ dtype: object</pre>
       <td>2543689.0</td>
       <td>2198517.0</td>
       <td>1168734.0</td>
+    </tr>
+    <tr>
+      <th>6</th>
+      <td>2156262.0</td>
+      <td>1844811.0</td>
+      <td>992406.0</td>
+    </tr>
+    <tr>
+      <th>7</th>
+      <td>2485430.0</td>
+      <td>2119867.0</td>
+      <td>1278557.0</td>
+    </tr>
+    <tr>
+      <th>8</th>
+      <td>2378673.0</td>
+      <td>1909363.0</td>
+      <td>1119303.0</td>
+    </tr>
+    <tr>
+      <th>9</th>
+      <td>2122898.0</td>
+      <td>1617220.0</td>
+      <td>825745.0</td>
+    </tr>
+    <tr>
+      <th>10</th>
+      <td>2187298.0</td>
+      <td>1702686.0</td>
+      <td>974221.0</td>
     </tr>
   </tbody>
 </table>
