Change caption and picture.

--- a/slides/html/3-data_visualization.slides.html
+++ b/slides/html/3-data_visualization.slides.html
@@ -14390,8 +14390,8 @@ div.jp-OutputPrompt {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Section-3:-Data-Visualization">Section 3: Data Visualization<a class="anchor-link" href="#Section-3:-Data-Visualization">&#182;</a></h1><p>The human brain excels at finding patterns in visual representations of the data; so in this section, we will learn how to visualize data using <code>pandas</code> along with the <code>matplotlib</code> and <code>seaborn</code> libraries for additional features. We will create a variety of visualizations that will help us better understand our data.</p>
 <div style="text-align: center;">
-<img width="350" src="https://i.pinimg.com/originals/b4/af/50/b4af50a72edcc64e071c38981a630e83.jpg" alt="Panda hug"/>
-<div><small><em>From left to right: seaborn, matplotlib, and pandas. <a href="https://www.pinterest.com/pin/469641067369290673/">Source</a></em></small></div>
+<img width="300" src="https://data.whicdn.com/images/186942641/original.jpg" alt="Panda hug"/>
+<div><small><em>Clockwise from top left: matplotlib, seaborn, and pandas. <a href="https://weheartit.com/entry/186942641">Source</a></em></small></div>
 </div>
 </div>
 </div></section></section><section><section>
