--- a/slides/html/combined.slides.html
+++ b/slides/html/combined.slides.html
@@ -14396,7 +14396,7 @@ div.jp-OutputPrompt {
 <h2 id="Bio">Bio<a class="anchor-link" href="#Bio">&#182;</a></h2><ul>
 <li>data scientist and software engineer at Bloomberg in New York City</li>
 <li>working in information security</li>
-<li>author of <a href="https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/">Hands-On Data Analysis with Pandas</a> (currently on in its second edition)</li>
+<li>author of <a href="https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/">Hands-On Data Analysis with Pandas</a> (currently in its second edition)</li>
 <li>BS in operations research from Columbia University</li>
 <li>currently pursuing MS in computer science (ML specialization) from Georgia Tech</li>
 </ul>
