--- a/slides/html/combined.slides.html
+++ b/slides/html/combined.slides.html
@@ -15952,7 +15952,7 @@ Name: name, Length: 45716, dtype: object</pre>
 </div><div class="fragment">
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Here's an example of a Boolean mask for meteorites weighing more than 50 grams that was found on Earth (i.e. they were not observed falling):</p>
+<p>Here's an example of a Boolean mask for meteorites weighing more than 50 grams that were found on Earth (i.e., they were not observed falling):</p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
