--- a/slides/html/combined.slides.html
+++ b/slides/html/combined.slides.html
@@ -20286,7 +20286,7 @@ dtype: object</pre>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">holidays</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">&#39;../data/holidays.csv&#39;</span><span class="p">,</span> <span class="n">parse_dates</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">index_col</span><span class="o">=</span><span class="s1">&#39;date&#39;</span><span class="p">)</span>
-<span class="n">holidays</span><span class="o">.</span><span class="n">head</span><span class="p">()</span>
+<span class="n">holidays</span><span class="o">.</span><span class="n">loc</span><span class="p">[</span><span class="s1">&#39;2019&#39;</span><span class="p">]</span>
 </pre></div>
 
      </div>
@@ -20352,6 +20352,18 @@ dtype: object</pre>
     <tr>
       <th>2019-11-28</th>
       <td>Thanksgiving</td>
+    </tr>
+    <tr>
+      <th>2019-12-24</th>
+      <td>Christmas Eve</td>
+    </tr>
+    <tr>
+      <th>2019-12-25</th>
+      <td>Christmas Day</td>
+    </tr>
+    <tr>
+      <th>2019-12-31</th>
+      <td>New Year's Eve</td>
     </tr>
   </tbody>
 </table>
@@ -24014,7 +24026,7 @@ dtype: object</pre>
     <span class="n">plot_data</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">kind</span><span class="o">=</span><span class="s1">&#39;kde&#39;</span><span class="p">,</span> <span class="n">legend</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="s1">&#39;blue&#39;</span><span class="p">,</span> <span class="n">ax</span><span class="o">=</span><span class="n">ax</span><span class="p">)</span>
     <span class="n">ax</span><span class="o">.</span><span class="n">set</span><span class="p">(</span><span class="n">title</span><span class="o">=</span><span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="n">year</span><span class="si">}</span><span class="s1"> TSA Traveler Throughput&#39;</span><span class="p">,</span> <span class="n">xlabel</span><span class="o">=</span><span class="s1">&#39;travelers&#39;</span><span class="p">)</span>
 
-<span class="n">plt</span><span class="o">.</span><span class="n">tight_layout</span><span class="p">()</span> <span class="c1"># handle overlaps</span>
+<span class="n">fig</span><span class="o">.</span><span class="n">tight_layout</span><span class="p">()</span> <span class="c1"># handle overlaps</span>
 </pre></div>
 
      </div>
