Add links to data viz workshop.

--- a/slides/html/3-data_visualization.slides.html
+++ b/slides/html/3-data_visualization.slides.html
@@ -14391,7 +14391,7 @@ div.jp-OutputPrompt {
 <h1 id="Section-3:-Data-Visualization">Section 3: Data Visualization<a class="anchor-link" href="#Section-3:-Data-Visualization">&#182;</a></h1><p>The human brain excels at finding patterns in visual representations of the data; so in this section, we will learn how to visualize data using <code>pandas</code> along with the <code>matplotlib</code> and <code>seaborn</code> libraries for additional features. We will create a variety of visualizations that will help us better understand our data.</p>
 <div style="text-align: center;">
 <img width="300" src="https://data.whicdn.com/images/186942641/original.jpg" alt="Panda hug"/>
-<div><small><em>Clockwise from top left: matplotlib, seaborn, and pandas. <a href="https://weheartit.com/entry/186942641">Source</a></em></small></div>
+<div><small><em>Clockwise from top left: matplotlib, seaborn, and pandas. (<a href="https://weheartit.com/entry/186942641">source</a>)</em></small></div>
 </div>
 </div>
 </div></section></section><section><section>
@@ -15060,6 +15060,12 @@ div.jp-OutputPrompt {
 <li>We used <code>plt</code> functions to customize our plots, but <code>Axes</code> objects have equivalent methods for adding shaded regions, reference lines, annotations, etc. &ndash; although the method names might be slightly different than their <code>plt</code> function counterparts (e.g. <code>Axes.set_xlabel()</code> vs. <code>plt.xlabel()</code>). </li>
 <li>Likewise, <code>plt</code> functions can be used to add plot titles and axis labels, with the important caveat that  <code>Axes</code> methods should always be used instead when dealing with subplots &ndash; otherwise, the action will only affect the last subplot.</li>
 </ul>
+
+</div>
+</div></section><section>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>For more on data visualization in Python, including animations and interactive plots, check out the <a href="https://github.com/stefmolin/python-data-viz-workshop">Beyond the Basics: Data Visualization in Python</a> workshop.</p>
 
 </div>
 </div></section></section><section><section>
