--- a/slides/html/combined.slides.html
+++ b/slides/html/combined.slides.html
@@ -14422,7 +14422,7 @@ div.jp-OutputPrompt {
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Let's-get-started">Let's get started<a class="anchor-link" href="#Let's-get-started">&#182;</a></h2><p><em>Be sure to follow along in the notebooks.</em></p>
+<h2 id="Let's-get-started">Let's get started<a class="anchor-link" href="#Let's-get-started">&#182;</a></h2><p><em>Be sure to follow along in the <a href="https://github.com/stefmolin/pandas-workshop/tree/master/notebooks">notebooks</a>.</em></p>
 <p><img width="300" src="https://www.pngkey.com/png/detail/42-428839_silhouette-face-bamboo-cartoon-wild-bear-cute-panda.png" alt="Silhouette, Face, Bamboo, Cartoon, Wild, Bear, Cute - Panda Black And White@pngkey.com"></p>
 
 </div>
@@ -23693,7 +23693,7 @@ dtype: object</pre>
 <h1 id="Section-3:-Data-Visualization">Section 3: Data Visualization<a class="anchor-link" href="#Section-3:-Data-Visualization">&#182;</a></h1><p>The human brain excels at finding patterns in visual representations of the data; so in this section, we will learn how to visualize data using <code>pandas</code> along with the <code>matplotlib</code> and <code>seaborn</code> libraries for additional features. We will create a variety of visualizations that will help us better understand our data.</p>
 <div style="text-align: center;">
 <img width="300" src="https://data.whicdn.com/images/186942641/original.jpg" alt="Panda hug"/>
-<div><small><em>Clockwise from top left: matplotlib, seaborn, and pandas. <a href="https://weheartit.com/entry/186942641">Source</a></em></small></div>
+<div><small><em>Clockwise from top left: matplotlib, seaborn, and pandas. (<a href="https://weheartit.com/entry/186942641">source</a>)</em></small></div>
 </div>
 </div>
 </div></section></section><section><section>
@@ -24364,6 +24364,12 @@ dtype: object</pre>
 </ul>
 
 </div>
+</div></section><section>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>For more on data visualization in Python, including animations and interactive plots, check out the <a href="https://github.com/stefmolin/python-data-viz-workshop">Beyond the Basics: Data Visualization in Python</a> workshop.</p>
+
+</div>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
@@ -24583,7 +24589,7 @@ dtype: object</pre>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Thank-you!">Thank you!<a class="anchor-link" href="#Thank-you!">&#182;</a></h1><p><em>I hope you enjoyed the workshop. Note that all examples were developed exclusively for this workshop &ndash; check out <a href="https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/">Hands-On Data Analysis with Pandas</a> for more.</em></p>
+<h1 id="Thank-you!">Thank you!<a class="anchor-link" href="#Thank-you!">&#182;</a></h1><p><em>I hope you enjoyed the workshop. Note that all examples were developed exclusively for this workshop &ndash; check out <a href="https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/">Hands-On Data Analysis with Pandas</a> and the <a href="https://github.com/stefmolin/python-data-viz-workshop">Beyond the Basics: Data Visualization in Python</a> workshop for more.</em></p>
 <div style="text-align: center;">
 <img width="200" src="https://raw.githubusercontent.com/stefmolin/Hands-On-Data-Analysis-with-Pandas-2nd-edition/master/_img/pandas_drawing.PNG"></div>
 </div>
