--- a/slides/html/0-introduction.slides.html
+++ b/slides/html/0-introduction.slides.html
@@ -14394,11 +14394,11 @@ div.jp-OutputPrompt {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Bio">Bio<a class="anchor-link" href="#Bio">&#182;</a></h2><ul>
-<li>data scientist and software engineer at Bloomberg in New York City</li>
-<li>working in information security</li>
-<li>author of <a href="https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/">Hands-On Data Analysis with Pandas</a> (currently in its second edition)</li>
+<li>Software engineer and data scientist at Bloomberg in New York City</li>
+<li>Working in information security</li>
+<li>Author of <a href="https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/">Hands-On Data Analysis with Pandas</a> (currently in its second edition)</li>
 <li>BS in operations research from Columbia University</li>
-<li>currently pursuing MS in computer science (ML specialization) from Georgia Tech</li>
+<li>Currently pursuing MS in computer science (ML specialization) from Georgia Tech</li>
 </ul>
 
 </div>
