--- a/slides/html/3-data_visualization.slides.html
+++ b/slides/html/3-data_visualization.slides.html
@@ -15065,7 +15065,7 @@ div.jp-OutputPrompt {
 </div></section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>For more on data visualization in Python, including animations and interactive plots, check out the <a href="https://github.com/stefmolin/python-data-viz-workshop">Beyond the Basics: Data Visualization in Python</a> workshop.</p>
+<p>For more on data visualization in Python, including animations and interactive plots, check out my <a href="https://github.com/stefmolin/python-data-viz-workshop">Beyond the Basics: Data Visualization in Python</a> workshop.</p>
 
 </div>
 </div></section></section><section><section>
