Updates to section 3; tweaks for consistency with new workshop.

--- a/slides/html/2-data_wrangling.slides.html
+++ b/slides/html/2-data_wrangling.slides.html
@@ -15618,7 +15618,7 @@ dtype: object</pre>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Working-with-the-index">Working with the index<a class="anchor-link" href="#Working-with-the-index">&#182;</a></h2><p>So far, we haven't really worked with the index because it's just been a row number; however, we can change the values we have in the index to access additional features of the <code>pandas</code> library.</p>
+<h2 id="Working-with-the-index">Working with the index<a class="anchor-link" href="#Working-with-the-index">&#182;</a></h2><p>So far, we haven't really worked with the index because it's just been a row number; however, we can change the values we have in the index to access additional features of the pandas library.</p>
 
 </div>
 </div></section><section>
@@ -15807,7 +15807,7 @@ dtype: object</pre>
 </div></div><div class="fragment">
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><em>Tip: <code>taxis.sort_index(axis=1)</code> will sort the columns by name. The <code>axis</code> parameter is present throughout the <code>pandas</code> library: <code>axis=0</code> targets rows and <code>axis=1</code> targets columns.</em></p>
+<p><em>Tip: <code>taxis.sort_index(axis=1)</code> will sort the columns by name. The <code>axis</code> parameter is present throughout the pandas library: <code>axis=0</code> targets rows and <code>axis=1</code> targets columns.</em></p>
 
 </div>
 </div></div></section><section>
@@ -18577,7 +18577,7 @@ dtype: object</pre>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Time-series">Time series<a class="anchor-link" href="#Time-series">&#182;</a></h2><p>When working with time series data, <code>pandas</code> provides us with additional functionality to not just compare the observations in our dataset, but to use their relationship in time to analyze the data. In this section, we will see a few such operations for selecting date/time ranges, calculating changes over time, performing window calculations, and resampling the data to different date/time intervals.</p>
+<h2 id="Time-series">Time series<a class="anchor-link" href="#Time-series">&#182;</a></h2><p>When working with time series data, pandas provides us with additional functionality to not just compare the observations in our dataset, but to use their relationship in time to analyze the data. In this section, we will see a few such operations for selecting date/time ranges, calculating changes over time, performing window calculations, and resampling the data to different date/time intervals.</p>
 
 </div>
 </div></section><section>
@@ -19763,7 +19763,7 @@ dtype: object</pre>
 </div></section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>To understand what's happening, it's best to visualize the original data and the result, so here's a sneak peek of plotting with <code>pandas</code>:</p>
+<p>To understand what's happening, it's best to visualize the original data and the result, so here's a sneak peek of plotting with pandas:</p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
