--- a/slides/html/1-getting_started_with_pandas.slides.html
+++ b/slides/html/1-getting_started_with_pandas.slides.html
@@ -14388,7 +14388,7 @@ div.jp-OutputPrompt {
 <div class="slides"><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Section-1:-Getting-Started-With-Pandas">Section 1: Getting Started With Pandas<a class="anchor-link" href="#Section-1:-Getting-Started-With-Pandas">&#182;</a></h1><p>We will begin by introducing the <code>Series</code>, <code>DataFrame</code>, and <code>Index</code> classes, which are the basic building blocks of the <code>pandas</code> library, and showing how to work with them. By the end of this section, you will be able to create DataFrames and perform operations on them to inspect and filter the data.</p>
+<h1 id="Section-1:-Getting-Started-With-Pandas">Section 1: Getting Started With Pandas<a class="anchor-link" href="#Section-1:-Getting-Started-With-Pandas">&#182;</a></h1><p>We will begin by introducing the <code>Series</code>, <code>DataFrame</code>, and <code>Index</code> classes, which are the basic building blocks of the pandas library, and showing how to work with them. By the end of this section, you will be able to create DataFrames and perform operations on them to inspect and filter the data.</p>
 <div style="text-align: center;">
     <img width="400" src="https://hips.hearstapps.com/elleuk.cdnds.net/16/36/3200x1599/gallery-1473083573-pandas.jpg" alt="Waving panda">
     <div><small><em><a href="https://www.elle.com/uk/life-and-culture/culture/news/a31745/10-ways-to-celebrate-pandas-no-longer-being-endangered/">Source</a></em></small></div>
