--- a/slides/html/3-data_visualization.slides.html
+++ b/slides/html/3-data_visualization.slides.html
@@ -14799,7 +14799,7 @@ div.jp-OutputPrompt {
 <p>Some additional things to keep in mind:</p>
 <ul>
 <li>Matplotlib's <code>ticker</code> module provides functionality for customizing both the tick labels and locations &ndash; check out the <a href="https://matplotlib.org/stable/api/ticker_api.html">documentation</a> for more information.</li>
-<li>Pandas supports horizontal and stacked bars as well; <a href="https://opendatascience.com/how-to-pivot-and-plot-data-with-pandas/">this</a> blog post shows how to make stacked horizontal bars using a pivot table.</li>
+<li>Pandas supports horizontal and stacked bars as well; <a href="https://medium.com/@stefaniemolin/how-to-pivot-and-plot-data-with-pandas-9450939fcf8">this</a> blog post shows how to make stacked horizontal bars using a pivot table.</li>
 <li>The <code>plot()</code> method takes a lot of <a href="https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.plot.html">parameters</a>, many of which get passed down to Matplotlib; however, sometimes we need to use Matplotlib calls directly.</li>
 </ul>
 
