--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -14674,7 +14674,7 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Prerequisites">Prerequisites<a class="anchor-link" href="#Prerequisites">&#182;</a></h3><p>Consult the <a href="https://github.com/stefmolin/pandas-workshop">README</a> for environment setup instructions or use <a href="https://mybinder.org/v2/gh/stefmolin/binder-environments/pandas_workshop?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Fstefmolin%252Fpandas-workshop%26urlpath%3Dlab%252Ftree%252Fpandas-workshop%252F%26branch%3Dmaster">this</a> Binder environment.</p>
+<h3 id="Prerequisites">Prerequisites<a class="anchor-link" href="#Prerequisites">&#182;</a></h3><p>Consult the <a href="https://github.com/stefmolin/pandas-workshop">README</a> for environment setup instructions or use <a href="https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab">this</a> Binder environment.</p>
 
 </div>
 </div>
