--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -17063,7 +17063,7 @@ Length: 45716, dtype: bool</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Calculating-summary-statistics">Calculating summary statistics<a class="anchor-link" href="#Calculating-summary-statistics">&#182;</a></h2><p>In the next section of this workshop, we will discuss data cleaning for a more meaningful analysis of these datasets; however, we can already extract some interesting insights from the <code>meteorites</code> data by calculating summary statistics.</p>
+<h2 id="Calculating-summary-statistics">Calculating summary statistics<a class="anchor-link" href="#Calculating-summary-statistics">&#182;</a></h2><p>In the next section of this workshop, we will discuss data cleaning for a more meaningful analysis of our datasets; however, we can already extract some interesting insights from the <code>meteorites</code> data by calculating summary statistics.</p>
 
 </div>
 </div>
