Add missing comma

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -20514,7 +20514,7 @@ dtype: object</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>First, we will lowercase the column names and take the first word (e.g. <code>2021</code> for <code>2021 Traveler Throughput</code>) to make this easier to work with:</p>
+<p>First, we will lowercase the column names and take the first word (e.g., <code>2021</code> for <code>2021 Traveler Throughput</code>) to make this easier to work with:</p>
 
 </div>
 </div>
