Rephrase comment around dates with null values and add missing commas.

--- a/slides/html/2-data_wrangling.slides.html
+++ b/slides/html/2-data_wrangling.slides.html
@@ -17271,7 +17271,7 @@ dtype: object</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>This leaves us with some null values (the dates that haven't yet occurred):</p>
+<p>This leaves us with some null values (the dates that aren't present in the dataset):</p>
 
 </div>
 </div>
@@ -17605,7 +17605,7 @@ dtype: object</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><strong>Important</strong>: We aren't covering the <code>unstack()</code> and <code>stack()</code> methods, which are additional ways to pivot and melt, respectively. These come in handy when we have a multi-level index (e.g. if we ran <code>set_index()</code> with more than one column). More information can be found <a href="https://pandas.pydata.org/pandas-docs/stable/user_guide/reshaping.html">here</a>.</p>
+<p><strong>Important</strong>: We aren't covering the <code>unstack()</code> and <code>stack()</code> methods, which are additional ways to pivot and melt, respectively. These come in handy when we have a multi-level index (e.g., if we ran <code>set_index()</code> with more than one column). More information can be found <a href="https://pandas.pydata.org/pandas-docs/stable/user_guide/reshaping.html">here</a>.</p>
 
 </div>
 </div>
@@ -17991,7 +17991,7 @@ dtype: object</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><em>Tip: There are many parameters for this method so be sure to check out the <a href="https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html">documentation</a>. To append rows, take a look at <code>append()</code> and <code>pd.concat()</code>.</em></p>
+<p><em>Tip: There are many parameters for this method, so be sure to check out the <a href="https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html">documentation</a>. To append rows, take a look at <code>append()</code> and <code>pd.concat()</code>.</em></p>
 
 </div>
 </div>
